# chess-insights

./: .env  .gitignore  README.md  chess_pipeline_flow.py  docker-compose.yml  logs.txt  pyproject.toml
src/chess_insights/cli/: main.py
src/chess_insights/core/: analytics.py
src/chess_insights/data/: ingest.py  transform.py
src/chess_insights/storage/: mysql_client.py  redis_client.py
src/data/: sample_games.pgn
src/data/processed/: games_raw.csv
src/models/: metrics.json  rf_chess_model.joblib
tests/: test_analytics.py
